added Unit tests